# guangdong-energy-model

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: run_model.py
src/guangdong_energy_model/: __init__.py  data.py  data_loader.py  gem_loader.py  main.py  model.py  visualize.py
