[project]
name = "guangdong-energy-model"
version = "0.1.0"
description = "Energy system model for Guangdong Province, China"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypsa>=0.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "highspy>=1.7",
    "linopy>=0.4",
    "xarray>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[project.scripts]
guangdong-model = "guangdong_energy_model.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guangdong_energy_model"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
